; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_mem.c_write_mem.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_mem.c_write_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmctx = type { i32 }
%struct.rw_mem_args = type { i32, i32, i32* }

@MEM_F_WRITE = common dso_local global i32 0, align 4
@rw_mem_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_mem(%struct.vmctx* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.vmctx*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.rw_mem_args, align 8
  store %struct.vmctx* %0, %struct.vmctx** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.rw_mem_args, %struct.rw_mem_args* %11, i32 0, i32 2
  store i32* %9, i32** %12, align 8
  %13 = load i32, i32* %10, align 4
  %14 = getelementptr inbounds %struct.rw_mem_args, %struct.rw_mem_args* %11, i32 0, i32 0
  store i32 %13, i32* %14, align 8
  %15 = load i32, i32* @MEM_F_WRITE, align 4
  %16 = getelementptr inbounds %struct.rw_mem_args, %struct.rw_mem_args* %11, i32 0, i32 1
  store i32 %15, i32* %16, align 4
  %17 = load %struct.vmctx*, %struct.vmctx** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @rw_mem_cb, align 4
  %21 = call i32 @access_memory(%struct.vmctx* %17, i32 %18, i32 %19, i32 %20, %struct.rw_mem_args* %11)
  ret i32 %21
}

declare dso_local i32 @access_memory(%struct.vmctx*, i32, i32, i32, %struct.rw_mem_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
